Adicionado: svg package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  flutter_svg: ^2.0.17
 
 
 dev_dependencies:
@@ -21,9 +22,9 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/fonts
-    - assets/images
-    - assets/vectors
+    - assets/fonts/
+    - assets/images/
+    - assets/vectors/
 
   fonts:
     - family: Satoshi
