Modificado: nome package

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "youtube",
-    "short_name": "youtube",
+    "name": "spotify",
+    "short_name": "spotify",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
