--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = youtube
+PRODUCT_NAME = spotify
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.youtube
+PRODUCT_BUNDLE_IDENTIFIER = com.example.spotify
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
