Adicionado: bloc, hydrated_bloc e path_provider

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
+  flutter_bloc: ^9.0.0
+  hydrated_bloc: ^10.0.0
+  path_provider: ^2.1.5
 
 
 dev_dependencies:
